--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^7.3.0",
+    "react-input-mask": "^2.0.4",
+    "react-text-mask": "^5.5.0",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5"
