--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-imask": "^7.3.0",
     "react-input-mask": "^2.0.4",
+    "react-modal": "^3.16.1",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
