--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-imask": "^7.3.0",
     "react-input-mask": "^2.0.4",
     "react-modal": "^3.16.1",
