--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-text-mask": "^5.5.0",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
