--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-modal": "^3.16.1",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
+    "websocket": "^1.0.34",
     "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
